--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 node_modules
+mongo-volume
+npm-debug.log
+Dockerfile*
+docker-compose*
+.dockerignore
+.git
+.gitignore
+README.md
+LICENSE
+.vscode
